--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -35,17 +35,17 @@ spec:
         value: $(params.branch)
       runAfter:
         - init
-    - name: lint
+    - name: tests
       workspaces:
         - name: source
           workspace: pipeline-workspace
       taskRef:
-        name: flake8
+        name: nose
       params:
-      - name: image
-        value: "python:3.9-slim"
+      - name: database_uri
+        value: "sqlite:///test.db"
       - name: args
-        value: ["--count","--max-complexity=10","--max-line-length=127","--statistics"]
+        value: "-v --with-spec --spec-color"
       runAfter:
         - clone
         
