added build task

--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -14,6 +14,7 @@ spec:
   params:
     - name: repo-url
     - name: branch
+    - name: build-image
       default: main
   tasks:
     - name: init
@@ -48,4 +49,16 @@ spec:
         value: "-v --with-spec --spec-color"
       runAfter:
         - clone
-        
+    - name: build
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
+      taskRef:
+        name: buildah
+        kind: ClusterTask
+      params:
+      - name: IMAGE
+        value: "$(params.build-image)"
+      runAfter:
+        - tests
+        - lint
